Make local executor a plugin, and make it configurable through the regular configuration process